--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/backgorund.css">
+    <link rel="stylesheet" href="assets/css/background.css">
+    <link rel="stylesheet" href="assets/css/fonts.css">
+    <link rel="stylesheet" href="assets/css/colors.css">
 
     <title>Proyecto Final Patrones de Diseño</title>
 </head>
 <body>
-    <div>
-            
-    </div>
+    <div id="root"></div>
+    <script src="js/model/notasModel.js"></script>
+    <script src="js/view/notasView.js"></script>
+    <script src="js/controler/notasControler.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
